--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,15 @@
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 </head>
 <body>
-  <laputa-root></laputa-root>
+  <laputa-root>
+    <div class="laputa-bootstrapping">
+      <div class="la-ball-newton-cradle">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </laputa-root>
 </body>
 </html>
