--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
   <laputa-root>
     <div class="laputa-bootstrapping">
-      <div class="la-ball-newton-cradle">
+      <div class="la-ball-fussion la-ball">
         <div></div>
         <div></div>
         <div></div>
