--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <title>Laputa</title>
   <base href="/">
-
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Barlow|Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
 </head>
 <body>
   <laputa-root>
